# Generating-Twitter-Lists-with-Python

./: pyproject.toml
tweepy_lists/: app.py
